Fix all z-indexes

--- a/src/common/components/dropdown/dropdown.module.scss
+++ b/src/common/components/dropdown/dropdown.module.scss
@@ -15,7 +15,7 @@
   --dropdown-menu-background: var(--color-white);
   --dropdown-menu-color: var(--color-black);
   --dropdown-menu-max-height: 18.35rem;
-  --dropdown-menu-z-index: 100;
+  --dropdown-menu-z-index: 10;
   --dropdown-search-input-height: calc(
     var(--dropdown-button-height) - var(--border-width) * 2
   );
